// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShareSheetPendingDialog is rendered with status update 1`] = `
<div
  className="css-1lvu114-View-FlexBox-FlexColumn"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <div
    className="css-1tg2qwm-View-FlexBox-FlexColumn"
  >
    <div
      className="css-hs91vy-LoadingIndicator eq9prj20"
      size={30}
    />
    <span
      className="css-137ad86-Text"
      color="#6f6f6f"
    >
      Update
    </span>
  </div>
  <div
    className="css-wospjg-View-FlexBox-FlexRow epz0qe20"
  >
    <div
      className="css-t4wmtk-View-FlexBox-Spacer e13mj6h80"
    />
    <button
      className="ant-btn ant-btn-default"
      onClick={[Function]}
      type="button"
    >
      <span>
        Cancel
      </span>
    </button>
    <button
      className="ant-btn ant-btn-primary"
      onClick={[Function]}
      type="button"
    >
      <span>
        Run In Background
      </span>
    </button>
  </div>
</div>
`;

exports[`ShareSheetPendingDialog is rendered without status update 1`] = `
<div
  className="css-1lvu114-View-FlexBox-FlexColumn"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <div
    className="css-1tg2qwm-View-FlexBox-FlexColumn"
  >
    <div
      className="css-hs91vy-LoadingIndicator eq9prj20"
      size={30}
    />
    <span
      className="css-137ad86-Text"
      color="#6f6f6f"
    >
      wubba lubba dub dub
    </span>
  </div>
  <div
    className="css-wospjg-View-FlexBox-FlexRow epz0qe20"
  >
    <div
      className="css-t4wmtk-View-FlexBox-Spacer e13mj6h80"
    />
    <button
      className="ant-btn ant-btn-default"
      onClick={[Function]}
      type="button"
    >
      <span>
        Cancel
      </span>
    </button>
    <button
      className="ant-btn ant-btn-primary"
      onClick={[Function]}
      type="button"
    >
      <span>
        Run In Background
      </span>
    </button>
  </div>
</div>
`;
